--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,15 @@
-Todo:  
-  - Select play mode:
+Todo:
+  - Select play mode (TBD):
    1. Automa only (board + cards + player boards needed)
    2. Board state + Automa (only cards needed)
-  - Change layout depending on screen size.
-
-Done:
- - Save on each change. Only save the diff.
- - Select save slot on overview page.
+  - Switch to using Gameboard Screen instead of Overview Screen.
+  - Change layout depending on screen size for Gameboard Screen (currently fixed size for 800x1280).
+  - Change automa to include cards.
+  - Add class player board screens that will cover automa if selected for that class.
+  - Add BLE support to be able to connect players to main gameboard host.
+  - Add support for undo and save each change for BoardState.
+  - Add action log.
+  - Add action buttons on Gameboard Screen.
+  - Add support for strike and demonstration (Worker class actions).
+  - Add info on phase and active class.
+  - Add support to click the small policy widget to show enlarged editable version.
